# pshenmic-dpp

./: .gitignore  Cargo.toml  README.md  babel.config.json  build-js.sh  build.sh  generate-docs.ts  package.json  tsconfig.json  typedoc.json
.github/workflows/: build.yml  publish.yml
auto-docs/: hierarchy.html  index.html  modules.html
auto-docs/assets/: highlight.css  navigation.js  search.js
auto-docs/classes/: ActionTakerWASM.html  AssetLockProofWASM.html  AuthorizedActionTakersWASM.html  BatchTransitionWASM.html  BatchedTransitionWASM.html  BlockBasedDistributionWASM.html  ChainAssetLockProofWASM.html  ChangeControlRulesWASM.html  ContractBoundsWASM.html  CoreScriptWASM.html  DashPlatformProtocolWASM.html  DataContractCreateTransitionWASM.html  DataContractUpdateTransitionWASM.html  DataContractWASM.html  DistributionExponentialWASM.html  DistributionFixedAmountWASM.html  DistributionFunctionWASM.html  DistributionInvertedLogarithmicWASM.html  DistributionLinearWASM.html  DistributionLogarithmicWASM.html  DistributionPolynomialWASM.html  DistributionRandomWASM.html  DistributionStepDecreasingAmountWASM.html  DocumentBaseTransitionWASM.html  DocumentCreateTransitionWASM.html  DocumentDeleteTransitionWASM.html  DocumentPurchaseTransitionWASM.html  DocumentReplaceTransitionWASM.html  DocumentTransferTransitionWASM.html  DocumentTransitionWASM.html  DocumentUpdatePriceTransitionWASM.html  DocumentWASM.html  EpochBasedDistributionWASM.html  GroupStateTransitionInfoWASM.html  GroupWASM.html  IdentifierWASM.html  IdentityCreateTransitionWASM.html  IdentityCreditTransferWASM.html  IdentityCreditWithdrawalTransitionWASM.html  IdentityPublicKeyInCreationWASM.html  (+44 more)
auto-docs/enums/: ActionGoalWASM.html  AssetLockProofTypeWASM.html  BatchType.html  KeyType.html  NetworkWASM.html  PlatformVersionWASM.html  PoolingWASM.html  Purpose.html  SecurityLevel.html  TokenDistributionTypeWASM.html  TokenEmergencyActionWASM.html
auto-docs/functions/: cborToObject.html  initSync.html  objectToCbor.html
auto-docs/interfaces/: InitOutput.html
auto-docs/types/: InitInput.html  SyncInitInput.html
auto-docs/variables/: default.html
docs/: AuthorizedActionTakers.md  ChangeControlRules.md  TokenConfiguration.md  TokenConfigurationConvention.md  TokenKeepsHistoryRules.md  TokenMarketplaceRules.md  TokenPreProgrammedDistribution.md  TokenTradeMode.md
lib/: base122.d.ts  base122.js  index.d.ts  index.js
scripts/: base64.sh  build-js.sh  build.sh
src/: buffer.rs  lib.rs  utils.rs
src/document/methods/: js.rs  rust.rs
src/document_batch/: batch_enum.rs  generators.rs  mod.rs
src/identifier_utils/: mod.rs
src/identity_public_key/: key_type.rs  mod.rs  security_level.rs
src/mock_bls/: mod.rs
src/private_key/: mod.rs
tests/: AssetLockProof.spec.cjs  AssetLockProof.spec.js  AuthorizedActionTakers.spec.cjs  AuthorizedActionTakers.spec.js  BatchTransition.spec.cjs  BatchTransition.spec.js  ChainLockProof.spec.cjs  ChainLockProof.spec.js  ChangeControlRules.spec.js  CoreScript.spec.cjs  CoreScript.spec.js  DataContract.spec.cjs  DataContract.spec.js  DataContractCreateStateTransition.spec.cjs  DataContractCreateStateTransition.spec.js  DataContractCreateTransition.spec.js  DataContractUpdateStateTransition.spec.cjs  DataContractUpdateStateTransition.spec.js  DataContractUpdateTransition.spec.js  DistributionFunction.spec.cjs  DistributionFunction.spec.js  Document.spec.cjs  Document.spec.js  DocumentBatchTransition.spec.js  DocumentTransition.spec.cjs  DocumentTransition.spec.js  DocumentsTransitions.spec.cjs  DocumentsTransitions.spec.js  Identifier.spec.cjs  Identifier.spec.js  Identity.spec.js  IdentityCreateTransition.spec.cjs  IdentityCreateTransition.spec.js  IdentityCreditTransferTransition.spec.js  IdentityCreditWithdrawalTransition.spec.js  IdentityPublicKey.spec.js  IdentityTopUpTransition.spec.js  IdentityUpdateTransition.spec.cjs  IdentityUpdateTransition.spec.js  InstantLockProof.spec.js  (+26 more)
tests/mocks/DataContract/: bytes.js  id.js  index.js  ownerId.js
tests/mocks/Document/: index.js
tests/mocks/Identity/: index.js
tests/mocks/Locks/: index.js
tests/mocks/PrivateKey/: index.js
tests/mocks/PublicKey/: index.js
tests/mocks/TokenConfiguration/: index.js
tests/utils/: hex.js  wasm.js
typings/: index.d.ts
utils/: base122.mjs  convertBinary.mjs  generate-docs.ts
