[workspace]
resolver = "2"
members = [
    "packages/document",
    "packages/documents_batch",
    "packages/cbor_conversation",
    "packages/enums",
    "packages/mock_bls",
    "packages/private_key",
    "packages/identity_public_key",
    "packages/utils",
    "packages/identity",
    "packages/identity_transitions",
    "packages/state_transition",
    "packages/data_contract"
    , "packages/data_contract_transitions"]

[lib]
crate-type = ["cdylib", "lib"]

[package]
name = "pshenmic-dpp"
version = "1.0.4"
edition = "2024"
rust-version = "1.85"

[dependencies]
wee_alloc = { version = "0.4.5", default-features = false }
pshenmic_dpp_documents_batch = { path = "packages/documents_batch" }
pshenmic_dpp_document_search = { path = "packages/cbor_conversation" }
pshenmic_dpp_identity = { path = "packages/identity" }
pshenmic_dpp_identifier = { path = "packages/identifier" }
pshenmic_dpp_state_transition = { path = "packages/state_transition" }
pshenmic_dpp_identity_transitions = { path = "packages/identity_transitions" }
pshenmic_dpp_data_contract = { path = "packages/data_contract" }
pshenmic_dpp_data_contract_transitions = { path = "packages/data_contract_transitions" }
pshenmic_dpp_enums = { path = "packages/enums" }

[profile.release]
lto = "fat"
opt-level = 'z'
strip = "symbols"
codegen-units = 1
panic = "abort"
