[package]
name = "pshenmic-dpp"
version = "1.0.7-rc.19"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
dpp = { git = "https://github.com/dashpay/platform", tag = "v2.0.0", default-features = false }

[workspace.package]
version = "1.0.5"

[workspace]
resolver = "2"
members = [
    "packages/document",
    "packages/batch",
    "packages/cbor_conversation",
    "packages/enums",
    "packages/mock_bls",
    "packages/private_key",
    "packages/identity_public_key",
    "packages/utils",
    "packages/identity",
    "packages/identity_transitions",
    "packages/state_transition",
    "packages/data_contract",
    "packages/asset_lock_proof",
    "packages/data_contract_transitions",
    "packages/core_script",
    "packages/batch",
    "packages/group_state_transition_info",
    "packages/encrypted_note",
    "packages/token_configuration_change_item",
    "packages/token_configuration",
    "packages/masternode_vote"
]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
wee_alloc = { version = "0.4.5", default-features = false }
bincode = "=2.0.0-rc.3"
bincode_derive = "=2.0.0-rc.3"
pshenmic_dpp_document_search = { path = "packages/cbor_conversation" }
pshenmic_dpp_batch = { path = "packages/batch" }
pshenmic_dpp_identity = { path = "packages/identity" }
pshenmic_dpp_identifier = { path = "packages/identifier" }
pshenmic_dpp_state_transition = { path = "packages/state_transition" }
pshenmic_dpp_identity_transitions = { path = "packages/identity_transitions" }
pshenmic_dpp_data_contract = { path = "packages/data_contract" }
pshenmic_dpp_data_contract_transitions = { path = "packages/data_contract_transitions" }
pshenmic_dpp_enums = { path = "packages/enums" }
pshenmic_dpp_masternode_vote = {path = "packages/masternode_vote"}

[profile.release]
lto = "fat"
opt-level = "z"
strip = "symbols"
codegen-units = 1
panic = "abort"
incremental = false
debug = false
